# guia-docs

./: .env.example  .gitignore  .ruff.toml  404.html  CLAUDE.md  CNAME  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.chainlit/: config.toml
.github/workflows/: ci.yml  deploy.yml
arquitectura/: index.html
conectores/: index.html
docker/api/: Dockerfile  Dockerfile.prod
docker/nginx/: nginx.conf  nginx.prod.conf
docker/postgres/: init.sql
docker/rabbitmq/: definitions.json
docs/: arquitectura.md  conectores.md  index.md  modelo-comercial.md
docs/ops/: mac-mini-ram-report.md
en/: index.html
en/arquitectura/: index.html
en/conectores/: index.html
en/estandares/: index.html
en/modelo-comercial/: index.html
en/roadmap/: index.html
estandares/: index.html
modelo-comercial/: index.html
public/: auto-login.js  guia-brand.js  guia.css  theme.json  upeu.css
roadmap/: index.html
scripts/: bootstrap-db.sh  harvest.sh
search/: search_index.json
src/guia/: __init__.py  __main__.py  cli.py  config.py  container.py  logging.py
src/guia/api/routes/: chat.py  profile.py
src/guia/auth/: __init__.py  keycloak.py
src/guia/channels/: __init__.py  chainlit_app.py  telegram_bot.py
src/guia/dashboard/: app.py
src/guia/domain/: __init__.py  chat.py
src/guia/scheduler/: __init__.py  jobs.py
src/guia/search/: backend.py
src/guia/services/: __init__.py  chat.py  intent.py  profile.py
src/guia/worker/: celery_app.py
src/guia/worker/tasks/: grobid.py  harvester.py  health.py  indexer.py
tests/unit/: test_config.py
